<resources>
    <string name="app_name">TuDu</string>
    <string name="add_task">New Task</string>
    <string name="task_save_text">Save</string>
    <string name="task_title_text">Title:</string>
    <string name="task_priority_text">Priority:</string>
    <string name="task_due_date_text">Due Date:</string>
    <string name="task_notes_text">Notes:</string>
    <string name="task_status_text">Status:</string>
    <string name="task_edit_text">Edit Task</string>
    <string name="task_done_text">Done</string>
    <string name="task_delete_text">Delete Task</string>
    <string name="check_mark_text">Check Mark</string>
</resources>
